# libepg

./: .gitignore  Cargo.toml
src/: assemble_xml.rs  compressed.rs  epg.rs  epg_channel.rs  epg_event.rs  error.rs  lib.rs  parse_xml.rs  read_xml.rs  reader.rs  write_xml.rs  writer.rs
tests/: data.rs  epg2xmltv.rs  psi.rs  psi2epg.rs  xmltv.rs  xmltv2epg.rs
tests/docs/: e1.xml  e2.xml  e3-1.xml  e3-2.xml  e4.xml
