[package]
name = "epg"
version = "0.1.0"
authors = ["Cesbo Developers Team"]
edition = "2018"
publish = false

[dependencies]
error-rules = "0.2"
http = { git = "ssh://git@github.com/cesbo/libhttp-v1.git", branch = "master" }
mpegts = { git = "ssh://git@github.com/cesbo/libmpegts.git", branch = "master" }
chrono = "0.4"
xml-rs = "0.8"
libflate = "1.1"

[features]
static = ["http/static"]
